# nginxfmt

./: .gitattributes  .gitignore  .goreleaser.yaml  .nginxfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: format_benchmark.rs
packaging/completions/: _nginxfmt  nginxfmt.bash  nginxfmt.fish
packaging/man/: nginxfmt.1
src/: ast.rs  cli.rs  config.rs  error.rs  formatter.rs  lexer.rs  lib.rs  main.rs  parser.rs  wasm.rs
tests/: cli.rs  golden.rs  proptest_format.rs
tests/fixtures/: basic.in.conf  basic.out.conf  comment_before_brace.in.conf  comment_before_brace.out.conf  comments.in.conf  lua_block.out.conf  messy.in.conf  messy.out.conf  trailing_comment.in.conf  trailing_comment.out.conf
wasm/: Cargo.toml
wasm/src/: lib.rs
