[package]
name = "nginxfmt"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A fast, lean nginx configuration file formatter"
license = "GPL-3.0-or-later"
repository = "https://github.com/nginxfmt/nginxfmt"
keywords = ["nginx", "formatter", "config"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
default-run = "nginxfmt"

[[bin]]
name = "nginxfmt"
path = "src/main.rs"

[[bin]]
name = "generate_completions"
path = "src/bin/generate_completions.rs"

[lib]
name = "nginxfmt"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"

[dev-dependencies]
insta = { version = "1.41", features = ["glob"] }
proptest = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "format_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
inherits = "release"
