[package]
name = "nginxfmt-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nginxfmt = { path = "..", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
